--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-
+/* Fundo */
 body {
     margin: 0;
     height: 100vh;
@@ -10,26 +7,35 @@ body {
     overflow: hidden;
 }
 
-/* Estrelas */
+/* Camada das estrelas */
+.stars {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+/* Estrelas individuais */
 .stars span {
     position: absolute;
-    width: 2px;
-    height: 2px;
     background: white;
+    border-radius: 50%;
     opacity: 0.8;
 }
 
-/* Conteúdo */
+/* ConteÃºdo acima das estrelas */
 .container {
     position: relative;
-    z-index: 2;
+    z-index: 1;
     width: 500px;
     margin: auto;
     top: 50%;
     transform: translateY(-50%);
     display: flex;
     flex-direction: column;
-    gap: 70px;
+    gap: 35px;
 }
 
 input, textarea {
