--- a/style.css
+++ b/style.css
@@ -22,4 +22,20 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content:
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  width: 260px;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+}
+
+/* espaço extra */
+.espaco {
+  height: 30px;
+}
