--- a/style.css
+++ b/style.css
@@ -4,18 +4,14 @@
   box-sizing: border-box;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   background: black;
-  font-family: Arial, sans-serif;
+  color: white;
+  height: 100vh;
   overflow: hidden;
+  font-family: Arial, sans-serif;
 }
 
-/* CENTRALIZA TUDO */
 .container {
   height: 100vh;
   display: flex;
@@ -23,25 +19,27 @@ body {
   justify-content: center;
   align-items: center;
   gap: 80px;
+  z-index: 2;
+  position: relative;
 }
 
 input, textarea {
   width: 260px;
   padding: 12px;
-  font-size: 16px;
   border-radius: 6px;
   border: none;
   outline: none;
+  font-size: 15px;
 }
 
 textarea {
   resize: none;
-  height: 80px;
+  height: 90px;
 }
 
 button {
   padding: 10px 20px;
-  border: none;
   border-radius: 6px;
+  border: none;
   cursor: pointer;
 }
